--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <title>Memory Game</title>
 </head>
 <body>
-    <h3>Score: <span id='result'></span></h3>
-
-    <div class="grid">
+    <h3>Score: <span id='result'>a</span></h3>
+    <div class="bg">
+        <div class="grid">
+        </div>
     </div>
 
 
