responssive header to link games pages

--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
-    <script src="app.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="js/memoryGame.js" charset="utf-8"></script>
     <title>Memory Game</title>
 </head>
 <body>
-    <h3>Score: <span id='result'>a</span></h3>
+    <header>
+        <nav>
+            <li><a href="index.html">Memory Game</a></li>
+            <li><a href="#">Whack-a-mole</a></li>
+            <li><a href="#">Connect Four</a></li>
+            <li><a href="#">Nokia 3310 Snake</a></li>
+            <li><a href="#">Space Invaders</a></li>
+            <li><a href="#">Frogger</a></li>
+            <li><a href="#">Tetris</a></li>
+        </nav>
+    </header>
+    <h3>Score: <span id='result'></span></h3>
     <div class="bg">
         <div class="grid">
         </div>
