Whack-a-mole game already done with all css

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-BT">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="js/memoryGame.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="css/memoryGame.css" />
+    
     <title>Memory Game</title>
 </head>
 <body>
     <header>
         <nav>
             <li><a href="index.html">Memory Game</a></li>
-            <li><a href="#">Whack-a-mole</a></li>
+            <li><a href="whack-a-mole.html">Whack-a-mole</a></li>
             <li><a href="#">Connect Four</a></li>
             <li><a href="#">Nokia 3310 Snake</a></li>
             <li><a href="#">Space Invaders</a></li>
@@ -20,6 +20,7 @@
             <li><a href="#">Tetris</a></li>
         </nav>
     </header>
+    <h1 style="text-align: center; color: white; background-color: black;width: 65%;margin:0 auto;">Memory Game!</h1>
     <h3>Score: <span id='result'></span></h3>
     <div class="bg">
         <div class="grid">
@@ -27,6 +28,6 @@
     </div>
 
 
-    
+    <script src="js/memoryGame.js" charset="utf-8"></script>
 </body>
 </html>
