Conect four game DONE, but it looks realy bad, so we still need some css code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <li><a href="index.html">Memory Game</a></li>
             <li><a href="whack-a-mole.html">Whack-a-mole</a></li>
-            <li><a href="#">Connect Four</a></li>
+            <li><a href="conect-four.html">Connect Four</a></li>
             <li><a href="#">Nokia 3310 Snake</a></li>
             <li><a href="#">Space Invaders</a></li>
             <li><a href="#">Frogger</a></li>
