--- a/conect-four.html
+++ b/conect-four.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/whack-a-mole.css" />
-    <script src="js/whack-a-mole.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="css/conect-four.css"/>
+    <script src="js/conect-four.js" charset="utf-8"></script>
     <title>Whack-a-mole</title>
 </head>
 <body>
@@ -13,12 +13,68 @@
         <nav>
             <li><a href="index.html">Memory Game</a></li>
             <li><a href="whack-a-mole.html">Whack-a-mole</a></li>
-            <li><a href="#">Connect Four</a></li>
+            <li><a href="conect-four.html">Connect Four</a></li>
             <li><a href="#">Nokia 3310 Snake</a></li>
             <li><a href="#">Space Invaders</a></li>
             <li><a href="#">Frogger</a></li>
             <li><a href="#">Tetris</a></li>
         </nav>
     </header>
+    <h1 style="text-align: center; color: white; background-color: black;width: 65%;margin:0 auto;">Conect Four!</h1>
+    <h3>The current Player is: Player<span id="current-player">1</span></h3>
+    <h3 id="result"></h3>
+
+    <div class="grid">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+    </div>
+    
 </body>
 </html>
