Conect four css done, not that good but what can you do. Iam not a designer

--- a/conect-four.html
+++ b/conect-four.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/conect-four.css"/>
     <script src="js/conect-four.js" charset="utf-8"></script>
-    <title>Whack-a-mole</title>
+    <title>conect-four</title>
 </head>
 <body>
     <header>
@@ -22,7 +22,8 @@
     </header>
     <h1 style="text-align: center; color: white; background-color: black;width: 65%;margin:0 auto;">Conect Four!</h1>
     <h3>The current Player is: Player<span id="current-player">1</span></h3>
-    <h3 id="result"></h3>
+    <h3 id="result1"></h3>
+    <h3 id="result2"></h3>
 
     <div class="grid">
         <div></div>
