snake game done, no css yet, so well... you know

--- a/conect-four.html
+++ b/conect-four.html
@@ -14,10 +14,10 @@
             <li><a href="index.html">Memory Game</a></li>
             <li><a href="whack-a-mole.html">Whack-a-mole</a></li>
             <li><a href="conect-four.html">Connect Four</a></li>
-            <li><a href="#">Nokia 3310 Snake</a></li>
-            <li><a href="#">Space Invaders</a></li>
-            <li><a href="#">Frogger</a></li>
-            <li><a href="#">Tetris</a></li>
+            <li><a href="nokia-3310-snake.html">Nokia 3310 Snake</a></li>
+            <li><a href="space-invaders.html">Space Invaders</a></li>
+            <li><a href="frogger.html">Frogger</a></li>
+            <li><a href="tetris.html">Tetris</a></li>
         </nav>
     </header>
     <h1 style="text-align: center; color: white; background-color: black;width: 65%;margin:0 auto;">Conect Four!</h1>
