--- a/nokia-3310-snake.html
+++ b/nokia-3310-snake.html
@@ -4,21 +4,129 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/whack-a-mole.css" />
-    <script src="js/whack-a-mole.js" charset="utf-8"></script>
-    <title>Whack-a-mole</title>
+    <link rel="stylesheet" href="css/nokia-3310-snake.css" />
+    <script src="js/nokia-3310-snake.js" charset="utf-8"></script>
+    <title>Nokia 3310 snake</title>
 </head>
 <body>
     <header>
         <nav>
             <li><a href="index.html">Memory Game</a></li>
             <li><a href="whack-a-mole.html">Whack-a-mole</a></li>
-            <li><a href="#">Connect Four</a></li>
-            <li><a href="#">Nokia 3310 Snake</a></li>
-            <li><a href="#">Space Invaders</a></li>
-            <li><a href="#">Frogger</a></li>
-            <li><a href="#">Tetris</a></li>
+            <li><a href="conect-four.html">Connect Four</a></li>
+            <li><a href="nokia-3310-snake.html">Nokia 3310 Snake</a></li>
+            <li><a href="space-invaders.html">Space Invaders</a></li>
+            <li><a href="frogger.html">Frogger</a></li>
+            <li><a href="tetris.html">Tetris</a></li>
         </nav>
     </header>
+    <h1 style="text-align: center; color: white; background-color: black;width: 65%;margin:0 auto;">Snake Game!</h1>
+
+    <button class="start">Start/Restart</button>
+    <div class="score">Score:<span>0</span></div>
+    <div class="grid">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
+
 </body>
 </html>
