--- a/nokia-3310-snake.html
+++ b/nokia-3310-snake.html
@@ -21,9 +21,11 @@
         </nav>
     </header>
     <h1 style="text-align: center; color: white; background-color: black;width: 65%;margin:0 auto;">Snake Game!</h1>
+    <div style="display: flex; justify-content: center;padding: 20px;gap:25px;">
+        <button class="start">Start/Restart</button>
+        <div class="score">Score:<span>0</span></div>
+    </div>
 
-    <button class="start">Start/Restart</button>
-    <div class="score">Score:<span>0</span></div>
     <div class="grid">
         <div></div>
         <div></div>
