Fixing bugs and stuff, i dont actualy remember what i did

--- a/frogger.html
+++ b/frogger.html
@@ -13,12 +13,15 @@
         <nav>
             <li><a href="index.html">Memory Game</a></li>
             <li><a href="whack-a-mole.html">Whack-a-mole</a></li>
-            <li><a href="#">Connect Four</a></li>
-            <li><a href="#">Nokia 3310 Snake</a></li>
-            <li><a href="#">Space Invaders</a></li>
-            <li><a href="#">Frogger</a></li>
-            <li><a href="#">Tetris</a></li>
+            <li><a href="conect-four.html">Connect Four</a></li>
+            <li><a href="nokia-3310-snake.html">Nokia 3310 Snake</a></li>
+            <li><a href="space-invaders.html">Space Invaders</a></li>
+            <li><a href="frogger.html">Frogger</a></li>
+            <li><a href="tetris.html">Tetris</a></li>
         </nav>
     </header>
+    <div style="background-color: black; width: 100vw; height: 100vh;position: absolute; display: flex;justify-content: center; align-items: center; ">
+        <p style="color: white;font-weight: bold;font-size:4rem">hmmmmm... We not ready too</p>
+    </div>
 </body>
 </html>
